# studyopengl

./: CMakeLists.txt  README.md  studyopengl.kdev4
inc/: animatesprite.hpp  appl.hpp  builder.hpp  demoshader.hpp  framedsprite.hpp  igraphicobject.hpp  indexbuffers.hpp  itempad.hpp  mainwindow.hpp  menu.hpp  menupad.hpp  mouse.hpp  renderer.hpp  resourceaccess.hpp  resourcefinder.hpp  resourcemanager.hpp  resourcemenu.hpp  resourceprimitive.hpp  resourcesprite.hpp  shaderprogramm.hpp  sprite.hpp  spritethings.hpp  studyexception.hpp  texture2D.hpp  vertexarray.hpp  vertexbufferlayout.hpp  vertexbuffers.hpp
res/: demofree.json  demosprites.json  resources.json  resourcestore.json  startres.json
res/shaders/: fsimple.txt  fsprite.txt  ftrans.txt  vsimple.txt  vsprite.txt  vtrans.txt
src/: main.cpp  mainwindow.cpp  studyexception.cpp
src/appl/: appl.cpp  builder.cpp  demoshader.cpp  graphicobject.cpp  igraphicobject.cpp  itempad.cpp  menu.cpp  menupad.cpp  mouse.cpp  resourceacces.cpp  resourcefinder.cpp  resourcemanager.cpp  resourcemenu.cpp  resourceprimitive.cpp  resourcesprite.cpp  spritethings.cpp
src/render/: animatesprite.cpp  framedsprite.cpp  indexbuffers.cpp  renderer.cpp  shaderprogramm.cpp  sprite.cpp  texture2D.cpp  vertexarray.cpp  vertexbufferlayout.cpp  vertexbuffers.cpp
